--- a/contents/1/pynotebook.qmd
+++ b/contents/1/pynotebook.qmd
@@ -25,7 +25,7 @@ JupyterLite contains a few popular packages. Therefore it is totally ok if you w
 
 
 ### Python fundamentals
-We will put some very basic Python commands here for you to warm up. More advanced Python knowledge will be covered during the rest of the semester. The main reference for this part is @Har2012. Another referenece is [My notes](https://xiaoxl.github.io/pr23f/).
+We will put some very basic Python commands here for you to warm up. More advanced Python knowledge will be covered during the rest of the semester. The main reference for this part is @Har2012. Another referenece is [My notes](https://xiaoxl.github.io/pr24/).
 
 #### Indentation
 Python is using indentation to denote code blocks. It is not convienent to write in the first place, but it forces you to write clean, readable code.
@@ -133,7 +133,7 @@ Both of them are spreadsheets format. Usually we use [`pandas.read_csv`](https:/
 - [`pandas.DataFrame.to_excel`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_excel.html)
 - [`matplotlib.pyplot.imsave`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.imsave.html)
 - [`cv.imwrite`](https://docs.opencv.org/3.4/d4/da8/group__imgcodecs.html#gabbc7ef1aa2edfaa87772f1202d67e0ce)
-- [`json.dump`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.imsave.html)
+- [`json.dump`](https://docs.python.org/3/library/json.html#json.dump)
 
 #### Relative paths
 In this course, when reading and writing files, please keep all the files using relative paths. That is, only write the path starting from the working directory. 
