--- a/contents/2/knnproj2.qmd
+++ b/contents/2/knnproj2.qmd
@@ -69,25 +69,9 @@ X = np.array(df[['Mileage', 'Gamingtime', 'Icecream']])
 y = np.array(df['Rating'])
 
 X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=40, stratify=y)
-
-X_train_norm, parameters = encodeNorm(X_train)
-X_test_norm, _ = encodeNorm(X_test, parameters=parameters)
-```
-
-- Using our codes.
-
-```{python}
-# Using our codes.
-n_neighbors = 10
-y_pred = np.array([classify_kNN(row, X_train_norm, y_train, k=n_neighbors)
-                   for row in X_test_norm])
-
-acc = np.mean(y_pred == y_test)
-acc
 ```
 
 
-- Using sklearn.
 
 ```{python}
 # Using sklearn.
@@ -110,20 +94,36 @@ accuracy_score(y_pipe, y_test)
 Similar to the previous section, we can run tests on `k` value to choose one to be used in our model using `GridSearchCV`.
 
 
+
 ```{python}
-from sklearn.model_selection import GridSearchCV, cross_val_score
+from sklearn.model_selection import GridSearchCV
 n_list = list(range(1, 101))
 parameters = dict(knn__n_neighbors=n_list)
-clf = GridSearchCV(pipe, parameters)
-clf.fit(X, y)
+clf = GridSearchCV(pipe, parameters, cv=5)
+clf.fit(X_train, y_train)
 clf.best_estimator_.get_params()["knn__n_neighbors"]
 ```
 
 
-From this result, in this case the best `k` is `4`. The corresponding cross-validation score is computed below.
+```{python}
+from sklearn.model_selection import cross_val_score
+from sklearn.base import clone
+import matplotlib.pyplot as plt
 
+n_list = list(range(1, 101))
+cv_scores = []
+for k in n_list:
+    pipe_tmp = clone(pipe)
+    pipe_tmp.set_params(knn__n_neighbors=k)
+    cv_scores.append(cross_val_score(pipe_tmp, X_train, y_train, cv=5).mean())
+plt.plot(cv_scores)
+```
+
+
+
+From this result, in this case the best `k` is `12`. The corresponding test score is 
 
 ```{python}
-cv_scores = cross_val_score(clf.best_estimator_, X, y, cv=5)
-np.mean(cv_scores)
+clf.score(X_test, y_test)
 ```
+
